--- a/s5_vue_instance/index.html
+++ b/s5_vue_instance/index.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Understanding the Vue Instance</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <!-- development version, includes helpful console warnings -->
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-  </head>
-  <body>
-    <div id="app1">
-      <h1>{{ title }}</h1>
-    </div>
-    <hr />
-    <div id="app2">
-      <h1>{{ title }}</h1>
-      <button @click="onChange" ref="changeableButton">
-        Change something in Vue 1
-      </button>
-      <button @click="changeButton">change other button label</button>
-    </div>
+	<head>
+		<meta charset="utf-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<title>Understanding the Vue Instance</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+		<!-- development version, includes helpful console warnings -->
+		<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+	</head>
+	<body>
+		<div id="app1">
+			<h1>{{ title }}</h1>
+		</div>
+		<hr />
+		<div id="app2">
+			<h1>{{ title }}</h1>
+			<button @click="handleChange" ref="changeableButton">
+				This will change something in Vue 1
+			</button>
+			<button @click="changeButton">change other button label</button>
+		</div>
 
-    <div id="app3"></div>
-    <script src="main.js"></script>
-  </body>
+		<div id="app3"></div>
+		<script src="main.js"></script>
+	</body>
 </html>
