--- a/s17_vuex/public/index.html
+++ b/s17_vuex/public/index.html
@@ -7,8 +7,10 @@
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
-<div id="app">
-</div>
-<script src="/dist/build.js"></script>
-</body>
+      <noscript>
+        <strong>We're sorry but s16_routing doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      </noscript>
+      <div id="app"></div>
+      <!-- built files will be auto injected -->
+    </body>
 </html>
