exploring vue components in js files

--- a/s2_DOM_interaction/index.html
+++ b/s2_DOM_interaction/index.html
@@ -18,6 +18,7 @@
     <div id="challenge1">
       <h1>{{ title }}</h1>
       <hr />
+      <button-counter></button-counter>
       <h3>Challenge 1</h3>
       <p>Fill the p element below with your Name and Age</p>
       <p>My name is {{ myName }} and I'm {{ myAge }}.</p>
@@ -43,11 +44,12 @@
     <hr />
     <hr />
     <hr />
-    <!--
-      <div id="">
-
+    
+      <div id="s2practice">
+            <h1>{{title}}</h1>
       </div>
-    -->
+   
+    <script src="PracticeVue.js"></script>
     <script src="vuePractice.js"></script>
   </body>
 </html>
