experimenting with nested global components

--- a/s2_DOM_interaction/index.html
+++ b/s2_DOM_interaction/index.html
@@ -18,7 +18,8 @@
     <div id="challenge1">
       <h1>{{ title }}</h1>
       <hr />
-      <button-counter></button-counter>
+      <practice-vue>hello</practice-vue>
+      <another-component></another-component>
       <h3>Challenge 1</h3>
       <p>Fill the p element below with your Name and Age</p>
       <p>My name is {{ myName }} and I'm {{ myAge }}.</p>
